<resources>
    <string name="wanandroid_app_name">玩Android</string>

    <string name="wanandroid_title_home">首页</string>
    <string name="wanandroid_title_square">广场</string>
    <string name="wanandroid_title_subscriptions">公众号</string>
    <string name="wanandroid_title_system">体系</string>
    <string name="wanandroid_title_project">项目</string>
    <string name="wanandroid_user_id">ID:%d</string>
    <string name="wanandroid_user_levle">等级:%d</string>
    <string name="wanandroid_user_rank">排名:%d</string>
</resources>
