<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/base_avatar_default"
            android:title="@string/wanandroid_title_home" />

    <item
            android:id="@+id/navigation_square"
            android:icon="@drawable/base_avatar_default"
            android:title="@string/wanandroid_title_square" />

    <item
            android:id="@+id/navigation_subscription"
            android:icon="@drawable/base_avatar_default"
            android:title="@string/wanandroid_title_subscriptions" />

    <item
            android:id="@+id/navigation_system"
            android:icon="@drawable/base_avatar_default"
            android:title="@string/wanandroid_title_system" />

    <item
            android:id="@+id/navigation_project"
            android:icon="@drawable/base_avatar_default"
            android:title="@string/wanandroid_title_project" />
</menu>
